--- a/src/components/cardPreview/cardPreview.module.css
+++ b/src/components/cardPreview/cardPreview.module.css
@@ -4,6 +4,17 @@
   flex-basis: 50%;
 }
 
+.cards {
+  width: 100%;
+  height: 100%;
+  padding: 0.5em 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .title {
   color: makerGreen;
+  text-align: center;
+  margin-bottom: 1em;
 }
