💄 change scroll area

--- a/src/components/editor/editor.module.css
+++ b/src/components/editor/editor.module.css
@@ -1,12 +1,20 @@
 @value makerGreen, makerLightGrey from '../../common/colors.css';
+@value mediaQuery from '../../common/size.css';
 
 .maker {
   flex-basis: 50%;
   border-right: 1px solid makerLightGrey;
   padding: 0.5em 2em;
+  overflow-y: auto;
 }
 
 .title {
   color: makerGreen;
   text-align: center;
+}
+
+@media screen and (max-width: mediaQuery) {
+  .maker {
+    overflow-y: initial;
+  }
 }
