--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,7 +5,8 @@
   text-align: center;
   padding: 0.5em;
   background-color: makerGreen;
-  position: relative;
+  position: sticky;
+  top: 0;
 }
 
 .logo {
